# shatter

./: .gitignore  .ocamlformat  LICENSE.md  Makefile  README.md  dune-project  shatter.opam
.github/workflows/: main.yml
data/config/: ball.ini  blocks.ini  end.ini  mini64.ini  paddle.ini  score.ini  shatter.ini  sound.ini  sparks.ini  walls.ini
data/sound/: CREDITS.md
data/texture/: CREDITS.md
src/: dune  shatter.ml
